Limit coverage report only to benchmarks module.

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ commands =
 [pytest]
 addopts =
   -p no:warnings
-  --cov=./
+  --cov=benchmarks/
   --cov-config=tox.ini
   --cov-report xml:test_data/coverage.xml
   --cov-report html:test_data/coverage_html_report
