Prevents lscpu prints if not verbose flag passed, and other args/testing improvements (#217)
* prevented lscpu prints if not verbose flag passed, adds more test coverage, revamps argument parsing

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 envlist = py{2.7,3}-{flake8,py.test}
+skipsdist=True
 
 [testenv]
 setenv = PYTHONPATH = {toxinidir}/benchmarks{:}{toxinidir}/tests
-skipdist=True
 skip_install=True
 deps=
   -rrequirements-test.txt
@@ -14,16 +14,17 @@ passenv =
   no_proxy
 commands =
   flake8: flake8 benchmarks tests
-  py.test: py.test
+  py.test: py.test {env:TESTOPTS:} {env:TESTFILES:{toxinidir}/tests}
 
 [pytest]
 addopts =
   -p no:warnings
   --cov=benchmarks/
   --cov-config=tox.ini
+  --cov-fail-under=88
   --cov-report xml:test_data/coverage.xml
   --cov-report html:test_data/coverage_html_report
-  --cov-report term
+  --cov-report term-missing
   --junitxml=test_data/out_report.xml
   --verbose
   --ignore=.tox
@@ -36,6 +37,9 @@ omit =
   .tox/*
   .pytest_cache/*
   __pycache__/*
+  benchmarks/image_segmentation/tensorflow/unet/inference/fp32/unet_infer.py
+  benchmarks/object_detection/tensorflow/ssd-mobilenet/inference/fp32/infer_detections.py
+  benchmarks/recommendation/tensorflow/wide_deep/inference/fp32/data_download.py
 
 [flake8]
 ignore = C901,W504
