Add TensorFlow serving support for object detection models (RFCN and SSD-MobileNet (#399)
* add tensorflow serving support and BKMs for object detection models rfcn and ssdmobilenet

--- a/tox.ini
+++ b/tox.ini
@@ -40,6 +40,7 @@ omit =
   benchmarks/image_recognition/tensorflow_serving/*
   benchmarks/image_segmentation/tensorflow/unet/inference/fp32/unet_infer.py
   benchmarks/object_detection/tensorflow/ssd-mobilenet/inference/fp32/infer_detections.py
+  benchmarks/object_detection/tensorflow_serving/*
   benchmarks/recommendation/tensorflow/wide_deep/inference/fp32/data_download.py
 
 [flake8]
