fix to run without requiring MODEL_DIR and use models in the container

--- a/examples/image_recognition/tensorflow/resnet50v1_5/training/fp32/k8s/mlops/multi-node/mpi-job-patch.yaml
+++ b/examples/image_recognition/tensorflow/resnet50v1_5/training/fp32/k8s/mlops/multi-node/mpi-job-patch.yaml
@@ -12,9 +12,9 @@ spec:
             image: $(REGISTRY)/model-zoo:2.1.0-image-recognition-resnet50v1-5-fp32-training
             imagePullPolicy: Always
             securityContext:
-              runAsUser: 11486040
-              runAsGroup: 17685
-              fsGroup: 17685
+              runAsUser: 0
+              runAsGroup: 0
+              fsGroup: 0
             envFrom:
             - configMapRef:
                 name: mlops-env
@@ -23,31 +23,27 @@ spec:
             - $(MODEL_DIR)/examples/fp32_training_multi_node.sh
             volumeMounts:
             - name: datasets
-              mountPath: /tf_dataset
+              mountPath: $(DATASET_DIR)
               readOnly: true
             - name: users
               mountPath: /Users
     Worker:
       template:
         spec:
-          securityContext:
-            runAsUser: 11486040
-            runAsGroup: 17685
-            fsGroup: 17685
           containers:
           - name: mpi-worker
             image: $(REGISTRY)/model-zoo:2.1.0-image-recognition-resnet50v1-5-fp32-training
             securityContext:
-              runAsUser: 11486040
-              runAsGroup: 17685
-              fsGroup: 17685
+              runAsUser: 0
+              runAsGroup: 0
+              fsGroup: 0
             envFrom:
             - configMapRef:
                 name: mlops-env
             workingDir: /
             volumeMounts:
             - name: datasets
-              mountPath: /tf_dataset
+              mountPath: $(DATASET_DIR)
               readOnly: true
             - name: users
               mountPath: /Users
