--- a/examples/image_recognition/tensorflow/resnet50v1_5/training/fp32/k8s/mlops/multi-node/mlops.env
+++ b/examples/image_recognition/tensorflow/resnet50v1_5/training/fp32/k8s/mlops/multi-node/mlops.env
@@ -1,4 +1,4 @@
 DATASET_DIR=/tf_dataset
-MODEL_DIR=/Users/kdkasrav/tmp/resnet50v1_5_fp32_training
-OUTPUT_DIR=/Users/kdkasrav/tmp/resnet50v1_5_fp32_training/output
+MODEL_DIR=/workspace/resnet50v1_5_fp32_training
+OUTPUT_DIR=/tmp/output
 REGISTRY=amr-registry.caas.intel.com/aipg-tf
