k8s kustomize refactoring and improvements

--- a/examples/common/k8s/mlops/multi-node/mlops.yaml
+++ b/examples/common/k8s/mlops/multi-node/mlops.yaml
@@ -1,5 +1,7 @@
 varReference:
 - kind: MPIJob
+  path: metadata/name
+- kind: MPIJob
   path: spec/mpiReplicaSpecs/Launcher/template/spec/containers/image
 - kind: MPIJob
   path: spec/mpiReplicaSpecs/Launcher/template/spec/containers/command
