--- a/examples/image_recognition/tensorflow/resnet50v1_5/training/fp32/k8s/mlops/single-node/mlops.env
+++ b/examples/image_recognition/tensorflow/resnet50v1_5/training/fp32/k8s/mlops/single-node/mlops.env
@@ -1,4 +1,6 @@
 DATASET_DIR=/tf_dataset
+MODEL_NAME=resnet50v1_5_fp32_training
 MODEL_DIR=/workspace/resnet50v1_5_fp32_training
+/NFS_MOUNT_PATH=/Users
 OUTPUT_DIR=/tmp/output
 REGISTRY=amr-registry.caas.intel.com/aipg-tf
