--- a/examples/image_recognition/tensorflow/resnet50v1_5/training/fp32/k8s/mlops/single-node/kustomization.yaml
+++ b/examples/image_recognition/tensorflow/resnet50v1_5/training/fp32/k8s/mlops/single-node/kustomization.yaml
@@ -1,13 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
-- ../base
-resources:
-- pod.yaml
-images:
-- name: model-zoo
-  newName: model-zoo
-  newTag: 2.1.0-image-recognition-resnet50v1-5-fp32-training
+- ../../../common/k8s/mlops/single-node
 configMapGenerator:
 - name: mlops-env
   env: mlops.env
@@ -17,9 +11,23 @@ generatorOptions:
 patchesStrategicMerge:
 - pod-patch.yaml
 vars:
+- name: MODEL_NAME
+  fieldref:
+    fieldPath: data.MODEL_NAME
+  objref:
+    apiVersion: v1
+    kind: ConfigMap
+    name: mlops-env
 - name: MODEL_DIR
   fieldref:
     fieldPath: data.MODEL_DIR
+  objref:
+    apiVersion: v1
+    kind: ConfigMap
+    name: mlops-env
+- name: NFS_MOUNT_PATH
+  fieldref:
+    fieldPath: data.NFS_MOUNT_PATH
   objref:
     apiVersion: v1
     kind: ConfigMap
@@ -31,5 +39,3 @@ vars:
     apiVersion: v1
     kind: ConfigMap
     name: mlops-env
-configurations:
-- mlops.yaml
