--- a/examples/image_recognition/tensorflow/resnet50v1_5/training/fp32/k8s/mlops/single-node/pod-patch.yaml
+++ b/examples/image_recognition/tensorflow/resnet50v1_5/training/fp32/k8s/mlops/single-node/pod-patch.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: resnet50v1-5-fp32-training
+  name: $(MODEL_NAME)
 spec:
   securityContext:
     runAsUser: 0
@@ -16,4 +16,10 @@ spec:
         name: mlops-env
     workingDir: /
     command:
-    - $(MODEL_DIR)/examples/fp32_training_multi_node.sh
+    - $(MODEL_DIR)/examples/fp32_training_demo.sh
+    volumeMounts:
+    - name: datasets
+      mountPath: $(DATASET_DIR)
+      readOnly: true
+    - name: users
+      mountPath: $(NFS_MOUNT_PATH)
