--- a/examples/language_modeling/tensorflow/bert_large/training/fp32/k8s/mlops/single-node/mlops.env
+++ b/examples/language_modeling/tensorflow/bert_large/training/fp32/k8s/mlops/single-node/mlops.env
@@ -1,4 +1,6 @@
 DATASET_DIR=/tf_dataset
+MODEL_NAME=bert-large-fp32-training
 MODEL_DIR=/workspace/bert-large-fp32-training
+NFS_MOUNT_PATH=/Users
 OUTPUT_DIR=/tmp/output
 REGISTRY=amr-registry.caas.intel.com/aipg-tf
