--- a/examples/language_modeling/tensorflow/bert_large/training/fp32/k8s/mlops/single-node/pod-patch.yaml
+++ b/examples/language_modeling/tensorflow/bert_large/training/fp32/k8s/mlops/single-node/pod-patch.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: bert-large-fp32-training
+  name: $(MODEL_NAME)
 spec:
   securityContext:
     runAsUser: 0
@@ -10,10 +10,15 @@ spec:
   containers:
   - name: single-node
     image: $(REGISTRY)/model-zoo:2.1.0-language-modeling-bert-fp32-training
-    imagePullPolicy: Always
     envFrom:
     - configMapRef:
         name: mlops-env
     workingDir: /
     command:
     - $(MODEL_DIR)/examples/fp32_training_single_node.sh
+    volumeMounts:
+    - name: datasets
+      mountPath: $(DATASET_DIR)
+      readOnly: true
+    - name: users
+      mountPath: $(NFS_MOUNT_PATH)
