--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = py{2.7,3}-{flake8,py.test}
 skipsdist=True
 
 [testenv]
-setenv = PYTHONPATH = {toxinidir}/benchmarks{:}{toxinidir}/tests
+setenv = PYTHONPATH = {toxinidir}{:}.{:}benchmarks{:}tests
 skip_install=True
 deps=
   -rrequirements-test.txt
@@ -21,15 +21,17 @@ addopts =
   -p no:warnings
   --cov=benchmarks/
   --cov-config=tox.ini
-  --cov-fail-under=88
+  --cov-fail-under=26
   --cov-report xml:test_data/coverage.xml
   --cov-report html:test_data/coverage_html_report
   --cov-report term-missing
   --junitxml=test_data/out_report.xml
   --verbose
   --ignore=.tox
+
 norecursedirs=.tox
 testpaths = tests
+junit_family=xunit1
 
 ;pytest coverage setup
 [coverage:run]
