Run only 'linting' with 'make lint'

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ passenv =
   no_proxy
 commands =
   flake8: flake8 benchmarks tests
-  py.test {posargs}
+  py.test: py.test {env:TESTOPTS:} {env:TESTFILES:{toxinidir}/tests}
 
 [pytest]
 addopts =
