remove fp32_export_to_saved_graph.sh since it would need to be in a pipeline that we haven't defined yet

--- a/examples/common/k8s/mlops/base/mlops.env
+++ b/examples/common/k8s/mlops/base/mlops.env
@@ -1,5 +1,2 @@
-DATASET_DIR=/dataset
-NFS_PATH=/exported_users
-NFS_MOUNT_PATH=/home
+NFS_PATH=/home
 NFS_SERVER=0.0.0.0
-OUTPUT_DIR=/workspace/output
