--- a/examples/image_recognition/tensorflow/resnet50v1_5/training/fp32/k8s/mlops/single-node/pod-patch.yaml
+++ b/examples/image_recognition/tensorflow/resnet50v1_5/training/fp32/k8s/mlops/single-node/pod-patch.yaml
@@ -4,19 +4,19 @@ metadata:
   name: $(MODEL_NAME)
 spec:
   securityContext:
-    runAsUser: 0
-    runAsGroup: 0
-    fsGroup: 0
+    runAsUser: $(USER_ID)
+    runAsGroup: $(GROUP_ID)
+    fsGroup: $(GROUP_ID)
   containers:
   - name: single-node
-    image: $(REGISTRY)/model-zoo:2.1.0-image-recognition-resnet50v1-5-fp32-training
+    image: $(REGISTRY)/model-zoo:2.1.0-image-recognition-$(MODEL_NAME)
     imagePullPolicy: Always
     envFrom:
     - configMapRef:
         name: mlops-env
-    workingDir: /
+    workingDir: $(MODEL_DIR)
     command:
-    - $(MODEL_DIR)/examples/fp32_training_demo.sh
+    - $(MODEL_DIR)/examples/$(MODEL_SCRIPT)
     volumeMounts:
     - name: datasets
       mountPath: $(DATASET_DIR)
