--- a/examples/language_modeling/tensorflow/bert_large/training/fp32/k8s/mlops/single-node/pod-patch.yaml
+++ b/examples/language_modeling/tensorflow/bert_large/training/fp32/k8s/mlops/single-node/pod-patch.yaml
@@ -4,18 +4,18 @@ metadata:
   name: $(MODEL_NAME)
 spec:
   securityContext:
-    runAsUser: 0
-    runAsGroup: 0
-    fsGroup: 0
+    runAsUser: $(USER_ID)
+    runAsGroup: $(GROUP_ID)
+    fsGroup: $(GROUP_ID)
   containers:
   - name: single-node
-    image: $(REGISTRY)/model-zoo:2.1.0-language-modeling-bert-fp32-training
+    image: $(REGISTRY)/model-zoo:2.1.0-language-modeling-$(MODEL_NAME)
     envFrom:
     - configMapRef:
         name: mlops-env
-    workingDir: /
+    workingDir: $(MODEL_DIR)
     command:
-    - $(MODEL_DIR)/examples/fp32_training_single_node.sh
+    - $(MODEL_DIR)/examples/$(MODEL_SCRIPT)
     volumeMounts:
     - name: datasets
       mountPath: $(DATASET_DIR)
