--- a/examples/common/k8s/mlops/multi-node/mlops.yaml
+++ b/examples/common/k8s/mlops/multi-node/mlops.yaml
@@ -4,12 +4,28 @@ varReference:
 - kind: MPIJob
   path: spec/mpiReplicaSpecs/Launcher/template/spec/containers/image
 - kind: MPIJob
+  path: spec/mpiReplicaSpecs/Launcher/template/spec/containers/workingDir
+- kind: MPIJob
   path: spec/mpiReplicaSpecs/Launcher/template/spec/containers/command
 - kind: MPIJob
   path: spec/mpiReplicaSpecs/Launcher/template/spec/containers/volumeMounts/mountPath
+- kind: MPIJob
+  path: spec/mpiReplicaSpecs/Launcher/template/spec/containers/securityContext/runAsUser
+- kind: MPIJob
+  path: spec/mpiReplicaSpecs/Launcher/template/spec/containers/securityContext/runAsGroup
+- kind: MPIJob
+  path: spec/mpiReplicaSpecs/Launcher/template/spec/containers/securityContext/fsGroup
 - kind: MPIJob
   path: spec/mpiReplicaSpecs/Worker/template/spec/containers/image
 - kind: MPIJob
   path: spec/mpiReplicaSpecs/Worker/template/spec/containers/command
 - kind: MPIJob
+  path: spec/mpiReplicaSpecs/Worker/template/spec/containers/workingDir
+- kind: MPIJob
   path: spec/mpiReplicaSpecs/Worker/template/spec/containers/volumeMounts/mountPath
+- kind: MPIJob
+  path: spec/mpiReplicaSpecs/Worker/template/spec/containers/securityContext/runAsUser
+- kind: MPIJob
+  path: spec/mpiReplicaSpecs/Worker/template/spec/containers/securityContext/runAsGroup
+- kind: MPIJob
+  path: spec/mpiReplicaSpecs/Worker/template/spec/containers/securityContext/fsGroup
