--- a/examples/image_recognition/tensorflow/resnet50v1_5/training/fp32/k8s/mlops/multi-node/mlops.env
+++ b/examples/image_recognition/tensorflow/resnet50v1_5/training/fp32/k8s/mlops/multi-node/mlops.env
@@ -1,6 +1,11 @@
-DATASET_DIR=/tf_dataset
-MODEL_NAME=resnet50v1_5_fp32_training
-MODEL_DIR=/workspace/resnet50v1_5_fp32_training
+DATASET_DIR=/datasets
+MODEL_NAME=resnet50v1-5-fp32-training
+MODEL_DIR=/workspace/resnet50v1-5-fp32-training
+MODEL_SCRIPT=fp32_training_multi_node.sh
 NFS_MOUNT_PATH=/Users
 OUTPUT_DIR=/tmp/output
-REGISTRY=amr-registry.caas.intel.com/aipg-tf
+REGISTRY=docker.io
+USER_ID=0
+USER_NAME=root
+GROUP_ID=0
+GROUP_NAME=root
