Rename references to examples to quickstart in k8s yamls

--- a/quickstart/language_modeling/tensorflow/bert_large/training/fp32/k8s/mlops/single-node/pod-patch.yaml
+++ b/quickstart/language_modeling/tensorflow/bert_large/training/fp32/k8s/mlops/single-node/pod-patch.yaml
@@ -15,7 +15,7 @@ spec:
         name: mlops-env
     workingDir: $(MODEL_DIR)
     command:
-    - $(MODEL_DIR)/examples/$(MODEL_SCRIPT)
+    - $(MODEL_DIR)/quickstart/$(MODEL_SCRIPT)
     volumeMounts:
     - name: datasets
       mountPath: $(DATASET_DIR)
