--- a/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/k8s/mlops/multi-node/mpi-job-patch.yaml
+++ b/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/k8s/mlops/multi-node/mpi-job-patch.yaml
@@ -20,7 +20,7 @@ spec:
             - configMapRef:
                 name: mlops-env
             command:
-            - $(MODEL_DIR)/examples/$(MODEL_SCRIPT)
+            - $(MODEL_DIR)/quickstart/$(MODEL_SCRIPT)
             volumeMounts:
             - name: datasets
               mountPath: $(DATASET_DIR)
