--- a/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32/k8s/mlops/pipeline/kustomization.yaml
+++ b/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32/k8s/mlops/pipeline/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind:
 bases:
-- ../../../common/k8s/mlops/base
+- ../../../common/tensorflow/k8s/mlops/base
 configMapGenerator:
 - name: mlops-env
   env: mlops.env
