Wide and Deep large ds training pipeline updates for retraining

--- a/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32/k8s/mlops/pipeline/kustomization.yaml
+++ b/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/fp32/k8s/mlops/pipeline/kustomization.yaml
@@ -97,3 +97,10 @@ vars:
     apiVersion: v1
     kind: ConfigMap
     name: mlops-env
+- name: RETRY_LIMIT
+  fieldref:
+    fieldPath: data.RETRY_LIMIT
+  objref:
+    apiVersion: v1
+    kind: ConfigMap
+    name: mlops-env
