--- a/k8s/image_recognition/tensorflow/resnet50v1_5/inference/fp32/mlops/serving/service.yaml
+++ b/k8s/image_recognition/tensorflow/resnet50v1_5/inference/fp32/mlops/serving/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: model-service
+  name: resnet50v1-5-fp32-inference # {"$openapi":"MODEL_SERVING_NAME"}
   labels:
-    app: model-server
+    app: resnet50v1-5-fp32-server # {"$openapi":"MODEL_SERVING_LABEL"}
 spec:
   # comment or delete the following line if you want to use a LoadBalancer
   type: NodePort # https://kubernetes.io/docs/concepts/services-networking/service/#nodeport
@@ -12,9 +12,7 @@ spec:
   # type: LoadBalancer
   ports:
   - protocol: TCP
-    port: $(MODEL_SERVICE_PORT)
-    targetPort: $(MODEL_PORT)
+    port: 8501 # {"$openapi":"MODEL_SERVICE_PORT"}
+    targetPort: 8500 # {"$openapi":"MODEL_PORT"}
   selector:
-    app: model-server
-
-
+    app: resnet50v1-5-fp32-server # {"$openapi":"MODEL_SERVING_LABEL"}
