--- a/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/mlops/pipeline/train_and_serve.yaml
+++ b/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/mlops/pipeline/train_and_serve.yaml
@@ -1,11 +1,35 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
-  name: $(WORKFLOW_NAME)
+  name: wide-deep-large-ds-fp32-train-serve-wf # {"$openapi":"WORKFLOW_NAME"}
 spec:
-  entrypoint: $(MODEL_NAME)
+  entrypoint: wide-deep-large-ds-fp32-training # {"$openapi":"MODEL_NAME"}
+  arguments:
+    parameters:
+    - name: DEPLOYMENT_NAME
+      value: wide-deep-large-ds-fp32-training-deployment # {"$openapi":"DEPLOYMENT_NAME"}
+    - name: SERVER_NAME
+      value: wide-deep-large-ds-fp32-training-server # {"$openapi":"SERVER_NAME"}
+    - name: SERVICE_NAME
+      value: wide-deep-large-ds-fp32-training-service # {"$openapi":"SERVICE_NAME"}
+    - name: USER_ID
+      value: "0" # {"$openapi":"USER_ID_VALUE"}
+    - name: GROUP_ID
+      value: "0" # {"$openapi":"GROUP_ID_VALUE"}
+    - name: FS_ID
+      value: "0" # {"$openapi":"FS_ID_VALUE"}
+    - name: NFS_PATH
+      value: /nfs # {"$openapi":"NFS_PATH"}
+    - name: NFS_SERVER
+      value: 0.0.0.0 # {"$openapi":"NFS_SERVER"}
+    - name: OUTPUT_DIR
+      value: /nfs/root/wide-deep-large-ds-fp32-training/output # {"$openapi":"OUTPUT_PATH"}
+    - name: REPLICAS
+      value: "3" # {"$openapi":"REPLICAS_VALUE"}
+    - name: TF_SERVING_PORT
+      value: "8501" # {"$openapi":"TF_SERVING_PORT_VALUE"}
   templates:
-  - name: $(MODEL_NAME)
+  - name: wide-deep-large-ds-fp32-training # {"$openapi":"MODEL_NAME"}
     steps:
     - - name: train-wide-deep-large-ds
         template: train-wide-deep-large-ds
@@ -14,39 +38,60 @@ spec:
     - - name: wide-deep-large-ds-service
         template: wide-deep-large-ds-service
   - name: train-wide-deep-large-ds
+    securityContext:
+      runAsUser: 0 # {"$openapi":"USER_ID"}
+      runAsGroup: 0 # {"$openapi":"GROUP_ID"}
+      fsGroup: 0 # {"$openapi":"FS_ID"}
     container:
-      image: $(REGISTRY)/model-zoo:2.1.0-recommendation-$(MODEL_NAME)
+      image: docker.io/model-zoo:2.1.0-recommendation-wide-deep-large-ds-fp32-training # {"$openapi":"IMAGE"}
       imagePullPolicy: Always
-      command: [$(MODEL_DIR)/quickstart/$(MODEL_SCRIPT)]
-      securityContext:
-        runAsUser: $(USER_ID)
-        runAsGroup: $(GROUP_ID)
-        fsGroup: $(GROUP_ID)
-      envFrom:
-      - configMapRef:
-          name: mlops-env
+      workingDir: /workspace/wide-deep-large-ds-fp32-training # {"$openapi":"MODEL_DIR"}
+      command: # {"$openapi":"MODEL_COMMAND"}
+      - /workspace/wide-deep-large-ds-fp32-training/quickstart/fp32_training_check_accuracy.sh # {"$openapi":"MODEL_COMMAND"}
       env:
-      # Serving requires a model base directory and a model name folder, so
-      # we can't write the saved model directly into the OUTPUT_DIR, we need
-      # to have a folder with the model name inside of that
-      - name: OUTPUT_DIR
-        value: $(OUTPUT_DIR)/$(MODEL_NAME)
+      - name: CHECKPOINT_DIR
+        value: /nfs/root/wide-deep-large-ds-fp32-training/checkpoints # {"$openapi":"CHECKPOINT_PATH"}
+      - name: DATASET_DIR
+        value: /datasets # {"$openapi":"DATASET_DIR"}
+      - name: GROUP_ID
+        value: "0" # {"$openapi":"GROUP_ID_VALUE"}
+      - name: GROUP_NAME
+        value: root # {"$openapi":"GROUP_NAME"}
+      - name: OUTPUT_DIR # Serving requires a model base directory and a model name folder, so
+        value: /nfs/root/wide-deep-large-ds-fp32-training/output # {"$openapi":"OUTPUT_PATH"}
+      - name: TARGET_ACCURACY
+        value: "0.75" # {"$openapi":"TARGET_ACCURACY_VALUE"}
+      - name: USER_ID
+        value: "0" # {"$openapi":"USER_ID_VALUE"}
+      - name: USER_NAME
+        value: root # {"$openapi":"USER_NAME"}
       volumeMounts:
       - name: datasets
-        mountPath: $(DATASET_DIR)
+        mountPath: /datasets # {"$openapi":"DATASET_DIR"}
         readOnly: true
-      - name: users
-        mountPath: $(NFS_MOUNT_PATH)
+      - name: nfs-path
+        mountPath: /nfs # {"$openapi":"NFS_PATH"}
+      - name: mlops-scripts
+        mountPath: /workspace/wide-deep-large-ds-fp32-training/quickstart/fp32_training_check_accuracy.sh # {"$openapi":"MODEL_COMMAND"}
+        subPath: fp32_training_check_accuracy.sh # {"$openapi":"MODEL_SCRIPT"}
     retryStrategy:
-      limit: $(RETRY_LIMIT)
+      limit: 10 # {"$openapi":"RETRY_LIMIT"}
       retryPolicy: "OnFailure"
     volumes:
-    - name: users
-      persistentVolumeClaim:
-        claimName: users-pvc
     - name: datasets
-      persistentVolumeClaim:
-        claimName: datasets-pvc
+      hostPath:
+        path: /datasets # {"$openapi":"DATASET_DIR"}
+    - name: nfs-path
+      nfs:
+        server: 0.0.0.0 # {"$openapi":"NFS_SERVER"}
+        path: /nfs # {"$openapi":"NFS_PATH"}
+    - name: mlops-scripts
+      configMap:
+        name: mlops-scripts-wide-deep-large-ds-fp32-training
+        defaultMode: 0770
+        items:
+        - key: fp32_training_check_accuracy.sh # {"$openapi":"MODEL_SCRIPT"}
+          path: fp32_training_check_accuracy.sh # {"$openapi":"MODEL_SCRIPT"}
   - name: wide-deep-large-ds-deployment
     resource:
       action: create
@@ -54,7 +99,7 @@ spec:
         apiVersion: apps/v1
         kind: Deployment
         metadata:
-          name: $(MODEL_NAME)-deployment
+          name: {{workflow.parameters.DEPLOYMENT_NAME}}
           ownerReferences:
           - apiVersion: argoproj.io/v1alpha1
             kind: Workflow
@@ -64,36 +109,35 @@ spec:
         spec:
           selector:
             matchLabels:
-              app: $(MODEL_NAME)-server
-          replicas: $(REPLICAS)
+              app: {{workflow.parameters.SERVER_NAME}}
+          replicas: {{workflow.parameters.REPLICAS}}
           template:
             metadata:
               labels:
-                app: $(MODEL_NAME)-server
+                app: {{workflow.parameters.SERVER_NAME}}
             spec:
+              securityContext:
+                runAsUser: {{workflow.parameters.USER_ID}}
+                runAsGroup: {{workflow.parameters.GROUP_ID}}
+                fsGroup: {{workflow.parameters.FS_ID}}
               containers:
-              - name: $(MODEL_NAME)-server
+              - name: {{workflow.parameters.SERVER_NAME}}
                 image: intel/intel-optimized-tensorflow-serving:2.2.0
-                securityContext:
-                  runAsUser: $(USER_ID)
-                  runAsGroup: $(GROUP_ID)
                 env:
                 - name: MODEL_BASE_PATH
-                  value: $(OUTPUT_DIR)
+                  value: {{workflow.parameters.OUTPUT_DIR}}
                 - name: TF_CPP_MIN_VLOG_LEVEL
                   value: "1"
-                envFrom:
-                - configMapRef:
-                    name: mlops-env
                 volumeMounts:
-                - name: users
-                  mountPath: $(NFS_MOUNT_PATH)
+                - name: nfs-path
+                  mountPath: {{workflow.parameters.NFS_PATH}}
                 ports:
-                - containerPort: $(TF_SERVING_PORT)
+                - containerPort: {{workflow.parameters.TF_SERVING_PORT}}
               volumes:
-              - name: users
-                persistentVolumeClaim:
-                  claimName: users-pvc
+              - name: nfs-path
+                nfs:
+                  server: {{workflow.parameters.NFS_SERVER}}
+                  path: {{workflow.parameters.NFS_PATH}}
   - name: wide-deep-large-ds-service
     resource:
       action: create
@@ -101,9 +145,9 @@ spec:
         apiVersion: v1
         kind: Service
         metadata:
-          name: $(MODEL_NAME)-service
+          name: {{workflow.parameters.SERVICE_NAME}}
           labels:
-            app: $(MODEL_NAME)-server
+            app: {{workflow.parameters.SERVER_NAME}}
           ownerReferences:
           - apiVersion: argoproj.io/v1alpha1
             kind: Workflow
@@ -121,4 +165,4 @@ spec:
             port: 8501
             targetPort: 8500
           selector:
-            app: $(MODEL_NAME)-server
+            app: {{workflow.parameters.SERVER_NAME}}
