--- a/tools/docker/specs/resnet50v1-5-fp32-training_spec.yml
+++ b/tools/docker/specs/resnet50v1-5-fp32-training_spec.yml
@@ -18,6 +18,7 @@ slice_sets:
           documentation:
               name: README.md
               uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32
+              k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32
               text_replace:
                 <model name>: ResNet50 v1.5
                 <precision>: FP32
@@ -26,6 +27,9 @@ slice_sets:
                 <package url>: https://ubit-artifactory-or.intel.com/artifactory/list/cicd-or-local/model-zoo/resnet50v1-5-fp32-training.tar.gz
                 <package name>: resnet50v1-5-fp32-training.tar.gz
                 <package dir>: resnet50v1-5-fp32-training
+                <k8s package url>: https://ubit-artifactory-or.intel.com/artifactory/list/cicd-or-local/model-zoo/resnet50v1-5-fp32-training-k8s.tar.gz
+                <k8s package name>: resnet50v1-5-fp32-training-k8s.tar.gz
+                <k8s package dir>: resnet50v1-5-fp32-training-k8s
                 <docker image>: amr-registry.caas.intel.com/aipg-tf/model-zoo:2.1.0-image-recognition-resnet50v1-5-fp32-training
               docs:
                   - name: Title
@@ -44,8 +48,11 @@ slice_sets:
                     uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/advancedoptions.md
                   - name: License link
                     uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/license.md
+                  - name: Kubernetes
+                    k8s_uri: models/k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32/.docs/kubernetes.md
           args:
               - PACKAGE_NAME=resnet50v1-5-fp32-training
+              - K8S_PACKAGE_NAME=resnet50v1-5-fp32-training-k8s
           files:
               - source: benchmarks/common
                 destination: benchmarks/common
@@ -66,6 +73,8 @@ slice_sets:
               - source: models/image_recognition/tensorflow/resnet50v1_5/training
                 destination: models/image_recognition/tensorflow/resnet50v1_5/training
               - source: quickstart/image_recognition/tensorflow/resnet50v1_5/training/fp32
+                k8s_source: k8s/image_recognition/tensorflow/resnet50v1_5/training/fp32
                 destination: quickstart
               - source: quickstart/common
                 destination: quickstart/common
+
